--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -3,11 +3,17 @@
   background-repeat: no-repeat;
   background-position: center;
   margin: auto;
-  width: 1442.55px;
+  width: 100%;
   height: 832px;
   gap: 0px;
   background-color: #030a2a;
   display: flex;
   justify-content: center;
-  border: 5px solid rgba(107, 209, 255, 1);
+  border: 1px solid rgba(107, 209, 255, 1);
+ padding: 1px;
+}
+@media (max-width: 600px) {
+.banner{
+  display: none;
+}
 }
