--- a/src/components/BotonNew/BotonNew.css
+++ b/src/components/BotonNew/BotonNew.css
@@ -1,26 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 
 /* Estilos para los botones */
-.boton {
-  cursor: pointer;
-  width: 50px;
-  height: 54px;
-  border-radius: 10px;
-  border: 2px solid transparent; /* Cambiado a solid para que el efecto de hover sea visible */
-  background: rgba(0, 0, 0, 0.9);
-  font-family: "Source Sans 3";
-  font-size: 20px;
-  font-weight: 900;
-  line-height: 24px;
-  text-align: center;
-  color: white; /* Color de texto blanco */
-  transition: all 0.3s ease; /* Transición suave para el hover */
+.btn-new {
+ cursor: pointer;
+width: 45px;
+height: 45px;
+opacity: 0px;
+ border-radius: 20px;
+ font-size: 30px;
+ color: white;
+ background-color: black;
+ border: 4px solid;
+
+
 }
 
 /* Estilos de hover para los botones */
 .boton:hover {
   color: rgba(34, 113, 209, 1); /* Cambio de color al hacer hover */
-  border-color: rgba(34, 113, 209, 1); /* Cambio de color del borde al hacer hover */
+  border-color: rgba(
+    34,
+    113,
+    209,
+    1
+  ); /* Cambio de color del borde al hacer hover */
   box-shadow: 0px 0px 12px 4px rgba(34, 113, 209, 0.5); /* Sombra al hacer hover */
 }
 
@@ -34,7 +37,6 @@
 /* Media query para dispositivos con ancho máximo de 600px */
 @media (max-width: 600px) {
   .botones {
-  
     align-items: center; /* Centrar los botones verticalmente */
   }
 
