--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,6 +1,6 @@
 .cards-order {
   margin: auto;
-  width: 1442.55px;
+  width: 100%;
   padding: 50px;
   box-sizing: border-box;
  background-color: rgba(38, 38, 38, 1);
