--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   margin: auto;
-  width: 1442.55px;
+  width: 100%;
   height: 125px;
   top: 5px;
   left: 0.5px;
@@ -15,10 +15,17 @@
   justify-content: center;
   align-items: center;
 }
-.botones {
+.elementos{
   display: flex;
-  gap: 5px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+.botones-footer{
+  display: none;
+  gap: 10px;
+  }
+
 .boton {
   cursor: pointer;
   width: 180.13px;
@@ -48,4 +55,19 @@
   text-align: center;
   color: white;
   border: 2px solid var(--Blue, rgb(238, 239, 241));
+}
+/* @media (min-width: 600px) {
+  .botones-footer{
+    display:inline;
+  }
+
+} */
+
+@media (max-width: 600px) {
+.elementos{
+  display: none;
+}
+  .botones-footer{
+    display:flex;
+  }
 }
