--- a/src/components/Formulario/Formulario.css
+++ b/src/components/Formulario/Formulario.css
@@ -5,11 +5,16 @@ body {
   background-color: #2c2c2c; /* Fondo del cuerpo de la página */
   color: white; /* Color del texto del cuerpo de la página */
   font-family: 'Source Sans 3', sans-serif;
-}
-
-.formulario {
   margin: auto;
-  max-width: 1360px; /* Ancho máximo del formulario */
+}
+.sec-form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.formulario {
+ 
+  max-width: 95%; /* Ancho máximo del formulario */
   background-color: rgba(38, 38, 38, 1);
   border: 5px solid rgba(107, 209, 255, 1);
   color: white;
@@ -71,16 +76,16 @@ body {
 .formulario hr {
   border: 1px solid rgb(66, 63, 63); /* Borde gris oscuro */
   margin: 20px 0; /* Margen vertical */
+  width: 100%;
 }
 
 .formulario .group1, .formulario .group2 {
   display: flex;
   gap: 20px;
   align-items: center;
-  margin-bottom: 20px; /* Añadido margen inferior */
 }
 
-.formulario .botones {
+.formulario .botonesform {
   display: flex;
   justify-content: flex-start;
   gap: 20px;
@@ -104,4 +109,22 @@ body {
 .boton:hover {
   background-color: rgba(107, 209, 255, 1); /* Cambio de color al pasar el cursor */
   border-color: white;
+}
+@media (max-width: 600px) {
+  .formulario{
+    width: 90%;
+    gap:0;
+  }
+.formulario .group1, .formulario .group2{
+  flex-direction: column;
+  gap: 0;
+  align-items: flex-start;
+}
+.formulario input, .selec, .formulario textarea{
+  width: 80%;
+}
+.botonesform{
+  flex-direction: column;
+  align-items: center;
+}
 }
