--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,11 +2,11 @@
 
 .header {
   margin: auto;
-  width: 1442.55px;
+  width: 100%;
   height: 125px;
   top: 5px;
   left: 0.5px;
-  gap: 787px;
+
   border: 0px 0px 4px 0px;
   opacity: 0px;
   background: rgba(0, 0, 0, 0.9);
@@ -19,4 +19,16 @@
 .botones {
   display: flex;
   gap: 5px;
+}
+@media (max-width: 600px) {
+ .header {
+    height: 100px; /* Ajusta la altura según el espacio disponible */
+    display: none;
+  }
+  
+  .botones {
+    gap: 10px; /* Aumenta el espacio entre los botones */
+  }
+
+
 }
