--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -1,8 +1,9 @@
 .player{
-    width: 647.79px;
+    width: 50%;
+max-width: 647.79px;
+min-width: 459px;
 height: 333.58px;
-top: 343px;
-left: 756.09px;
+
 gap: 0px;
 border-radius: 15px;
 border: 5px 0px 0px 0px;
@@ -12,3 +13,11 @@ box-shadow: 0px 0px 17px 8px rgba(107, 209, 255, 1) inset;
 
 
 }
+
+@media (max-width: 600px) {
+
+    .player{
+        display: none;
+    }
+}
+
