--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+body {
+  
+  margin: auto;
+    
+  min-width: 320px;
+  min-height: 100vh;
+  max-width: 1500px;
+}
+@media (max-width: 600px) {
+body {
+  
+  margin: auto;
+    
+  min-width: 320px;
+  min-height: 100vh;
+  width: 100%;
+}
+  
+}
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -22,13 +41,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+
 
 h1 {
   font-size: 3.2em;
