--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,7 @@
+
 .photo {
-  position: relative; /* Establece posición relativa para poder posicionar los elementos hijos */
-  width: 429px;
+  min-width: 360px;
+  max-width: 429px;
   height: 260.85px;
   border-radius: 15px 15px 0px 0px;
   border: 5px solid var(--primary-color);
@@ -16,7 +17,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  width: 429px;
+ min-width: 360px;
+  max-width: 429px;
   height: 59px;
   border-radius: 0px 0px 15px 15px;
   background: rgba(0, 0, 0, 0.9);
@@ -33,4 +35,13 @@
 
 .iconos img:hover {
   cursor: pointer;
+}
+@media (max-width: 600px) {
+  .photo{
+  
+    width: 80%;
+  }
+   .iconos{
+    width: 80%;
+  }
 }
