--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,7 +1,8 @@
 .cards-order {
   margin: auto;
   width: 100%;
-  padding: 50px;
+ align-items: center;
+ justify-content: center;
   box-sizing: border-box;
  background-color: rgba(38, 38, 38, 1);
   display: flex;
@@ -13,6 +14,15 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-   gap:10px
+  gap:10px
+}
+@media (max-width: 600px) {
+.cards-order{
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 }
 
