--- a/src/components/TittleCard/TittleCard.css
+++ b/src/components/TittleCard/TittleCard.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .tittle-card{
+    min-width: 360px;
 width: 432px;
 height: 92px;
 border-radius: 15px;
@@ -19,4 +20,9 @@ font-weight: 800;
 white-space: nowrap; /* Evita el salto de línea */
 margin: 0;
 padding: 0;
+}
+@media (max-width: 600px) {
+    .tittle-card{
+        width: 100%;
+    }
 }
