--- a/src/components/Formulario/Formulario.css
+++ b/src/components/Formulario/Formulario.css
@@ -1,26 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
 
-body {
-  background-color: #2c2c2c; /* Fondo del cuerpo de la página */
-  color: white; /* Color del texto del cuerpo de la página */
-  font-family: 'Source Sans 3', sans-serif;
-  margin: auto;
-}
+
 .sec-form{
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100wh;
 }
 .formulario {
  
-  max-width: 95%; /* Ancho máximo del formulario */
+  width: 100%; /* Ancho máximo del formulario */
   background-color: rgba(38, 38, 38, 1);
   border: 5px solid rgba(107, 209, 255, 1);
   color: white;
   font-weight: lighter;
-  padding: 20px;
+  padding: 1%;
   border-radius: 15px; /* Bordes redondeados para el formulario */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .formulario h1, .formulario h2, .formulario h3 {
@@ -52,8 +51,8 @@ body {
 }
 
 .formulario input, .formulario textarea, .formulario select {
-  width: 573px;
-  padding: 10px;
+
+  padding: 1%;
   border-radius: 15px;
   border: 3px solid rgb(66, 63, 63); /* Borde gris oscuro */
   background:none;
@@ -61,12 +60,15 @@ body {
   font-family: 'Source Sans 3', sans-serif;
   font-size: 20px;
   font-weight: 600;
-  margin-bottom: 20px;
+ 
 }
+
 
 .formulario textarea {
   height: 220px;
   resize: none; /* Previene el redimensionamiento */
+  width: calc(350px*2);
+  min-width: 350px;
 }
 
 .formulario select {
@@ -79,11 +81,15 @@ body {
   width: 100%;
 }
 
-.formulario .group1, .formulario .group2 {
+ .group1,  .group2 {
+  width:80%;
+ 
   display: flex;
   gap: 20px;
   align-items: center;
+  justify-content: center;
 }
+
 
 .formulario .botonesform {
   display: flex;
@@ -116,12 +122,13 @@ body {
     gap:0;
   }
 .formulario .group1, .formulario .group2{
+  width: 100%;
   flex-direction: column;
   gap: 0;
   align-items: flex-start;
 }
-.formulario input, .selec, .formulario textarea{
-  width: 80%;
+.formulario .group1 input, .selec, .formulario textarea{
+  width: 100%;
 }
 .botonesform{
   flex-direction: column;
