--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -21,10 +21,10 @@ body {
 
 .modal-content {
   background: rgba(3, 18, 47, 1);
-  padding: 20px;
+height: 90%;
   border-radius: 8px;
-  width: 50%;
-  max-width: 100%;
+  width: 100%;
+  max-width: 90%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -39,7 +39,7 @@ body {
   right: 10px;
   background: none;
   border: none;
-  font-size: 18px;
+  font-size: 16px;
   cursor: pointer;
   color: white;
 }
@@ -52,16 +52,16 @@ body {
    color: white;
   width: 100%;
   max-width: 573px;
-  gap: 30px;
+  gap: 10px;
   display: flex;
   flex-direction: row;
  align-items: flex-start;
  align-items: start;
 }
 
-.form h1 {
+.titulo {
   font-family: "Roboto", sans-serif;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: 900;
   line-height: 70px;
   text-align: left;
@@ -73,7 +73,7 @@ body {
 .form select,
 .form textarea {
   font-family: "Source Sans 3", sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
   line-height: 24px;
   text-align: left;
@@ -82,7 +82,7 @@ body {
   border: 3px solid rgba(34, 113, 209, 1);
   background: rgba(3, 18, 47, 1);
   color: white;
-  padding: 10px;
+
 }
 
 .form textarea {
@@ -125,11 +125,12 @@ body {
 
  .modal-content{
     width: 100%;
+    height: 80%;
       }
       .form{
-        gap:10px;
+        gap:5px;
       }
-     .form h1 {
-        font-size: 15px;
+     .titulo{
+        font-size:20px;
       }
 }
